--- a/cloudformation/stack.yaml
+++ b/cloudformation/stack.yaml
@@ -20,6 +20,11 @@ Resources:
   Instance:
     Type: AWS::EC2::Instance
     Properties:
+      ImageId: ami-09964535fc01efa5f
+      InstanceType: t2.micro
+      KeyName: devops-girls-2023
+      SecurityGroups:
+        - !Ref SecurityGroupName #引用SecurityGroupName
       # TODO: Add properties according to the playbook
       IamInstanceProfile: !Ref InstanceProfile
       UserData:
