--- a/.github/workflows/prod-ci.yaml
+++ b/.github/workflows/prod-ci.yaml
@@ -27,7 +27,7 @@ jobs:
         env:
           REGISTRY: ${{ steps.aws-auth.outputs.registry }}
           REPOSITORY: devopsgirl2023/hello-ops-girl
-          IMAGE_TAG: ${{ github.sha }}-mayuxuan
+          IMAGE_TAG: ${{ github.sha }}-xule
         run: |
           docker pull $REGISTRY/$REPOSITORY:$IMAGE_TAG 
           docker tag $REGISTRY/$REPOSITORY:$IMAGE_TAG $REGISTRY/$REPOSITORY:latest
@@ -41,7 +41,7 @@ jobs:
       HOSTED_ZONE_ID: ${{ secrets.HOSTED_ZONE_ID }}
       DOMAIN_NAME: ${{ github.event.repository.name }}.${{ secrets.DOMAIN_NAME }}
       STACK_NAME: ${{ github.event.repository.name }}
-      IMAGE_TAG: ${{ github.sha }}
+      IMAGE_TAG: ${{ github.sha }}-xule
     steps:
       - uses: actions/checkout@v3
       - id: aws-auth
@@ -62,3 +62,4 @@ jobs:
           echo "${SSH_KEY}" | base64 -d > devops-girls-2023.pem
           chmod 600 devops-girls-2023.pem
           ansible-playbook --private-key devops-girls-2023.pem deploy.yml
+          
